[package]
name = "meow"
version = "0.0.0"
edition = "2024"
description = "a simple git wrapper. rust version of the original: https://github.com/ellipticobj/meower"
readme = "README.md"
repository = "https://github.com/ellipticobj/meower-rs"
license = "GPL-3.0"
keywords = ["git", "git-wrapper", "meow", "meower", "tool"]
categories = ["git", "command-line-tool"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
indicatif = "0.17.11"
homedir = "0.3.4"
